# truckboris

./: .HeaderParser.cpp.swp  .HeaderParser.h.swp  .TruckBorisTests.h.swp  .travis.yml  Declarations.h  Function.cpp  Function.h  HeaderElements.cpp  HeaderElements.h  HeaderParser.cpp  HeaderParser.cpp.bkp  HeaderParser.h  Makefile  Makefile.am  Makefile.in  README.md  TODO  TruckBorisTest.cpp  TruckBorisTests.h  Type.cpp  Type.h  Vagrantfile  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  dbg.h  extconf.rb  gears.cpp  gears.h  parserClasses.class.violet.html  truckboris.pc.in  update_src.sh
.deps/: truckBorisTests-Declarations.Po  truckBorisTests-Function.Po  truckBorisTests-HeaderElements.Po  truckBorisTests-HeaderParser.Po  truckBorisTests-TruckBorisTest.Po  truckBorisTests-Type.Po
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: c_ast_dump  class.cpp  class.h  cpp_ast_dump  enums.h  structures.h  test.c  test.cpp  test.h  test_bad.h  unions.h
m4/: unique_ptr.m4
src/: Declarations.cpp  Declarations.h  Function.cpp  Function.h  HeaderElements.cpp  HeaderElements.h  HeaderParser.cpp  HeaderParser.h  Type.h
tests/: .libtest_headerParser_obj.cpp.swp  TruckBorisTest.cpp  TruckBorisTests.h  compile.sh  cppunit.h  libtest_headerParser_obj.cpp  libtest_headerParser_ptr.cpp
